--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   box-sizing: border-box;
-  color: aqua;
+  color: rgb(156, 167, 167);
 }
 main {
-  background: #d37d7d;
+  background: #853a3a;
 }
