--- a/style.css
+++ b/style.css
@@ -37,6 +37,15 @@ section {
   margin: 3rem 0;
 }
 
+#contact-btn {
+  box-shadow: 0 0 5px cyan, 0 0 25px cyan;
+}
+
+#contact-btn:hover {
+  box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
+    0 0 200px cyan;
+}
+
 section > div {
   padding: 1.5rem;
   background-color: #ffffff;
