--- a/style.css
+++ b/style.css
@@ -38,12 +38,18 @@ section {
 }
 
 #contact-btn {
-  box-shadow: 0 0 5px cyan, 0 0 25px cyan;
+  color: #fff;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+  background-color: #007bff;
 }
 
 #contact-btn:hover {
-  box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
-    0 0 200px cyan;
+  color: #007bff;
+  background-color: #fc000070;
 }
 
 section > div {
@@ -51,7 +57,7 @@ section > div {
   background-color: #ffffff;
   margin-bottom: 1.5rem;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(255, 0, 0, 0.1);
 }
 
 section h2 {
@@ -120,7 +126,7 @@ nav ul li a:hover {
   border: 1px solid #dee2e6;
   border-radius: 0.5rem;
   margin-bottom: 1.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(255, 0, 0, 0.1);
 }
 
 #experience div h3,
@@ -186,6 +192,7 @@ footer a:hover {
   }
 
   nav ul {
+    display: none;
     flex-direction: column;
     align-items: center;
   }
